[project]
name = "wheel-of-advent-of-code"
version = "0.1.0"
description = "A Discord bot that randomly selects Advent of Code challenges"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
